--- a/Вейца_веле_(Покш_Килейбуе).mw
+++ b/Вейца_веле_(Покш_Килейбуе).mw
@@ -64,7 +64,7 @@
 Ашти [[Дожга лей]] лангсо. Кода лецтяви ({{Lang-ru|«Списке населенных пунктов Средне-Волжского края»}}) ([[1931 ие]]) Вейца – 38 кудот марто Шугуровань вельсоветсэ.
 
 == Веленть лемденть  ==
-Лемесь саеви эрзянь ''вейсэ''<ref name="Память, запечатленная в слове"/> валонть эйстэ, ({{Lang-ru|«вместе, сообща»}}). Эрямо таркась ульнесь путозь-стявтозь [[1928 ие]]стэ. 
+Лемесь саеви эрзянь ''вейсэ''<ref name="Память, запечатленная в слове"/> валонть эйстэ ({{Lang-ru|«вместе, сообща»}}). Эрямо таркась ульнесь путозь-стявтозь [[1928 ие]]стэ.
 
 == Содавикс ломанть те велестэнть ==
 ==Таркат велесэнть==
