--- a/Дожга_лей.mw
+++ b/Дожга_лей.mw
@@ -23,7 +23,7 @@
 }}
 '''Дожга лейне''' ({{Lang-ru|р. Ташага<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>}}) — витьёнонь [[Чермелей|Чермелеенть]] сянглей. 
 
-Дожга лейнесь чуди [[Мордовия Республикась|Мордовиясо]]. Саи чудеме [[Найман веле (Покш Килейбуе)|Ташто Найман веленть]] пелеве-чилисема ёндо. Чуди лембес-чилисемас ёнов, [[Вейца веле (Покш Килейбуе)|Вейца]] ды [[Шугур веле (Покш Килейбуе)|Шугур]] велетнева. Прамозо ашти 2,8 вп чиренть витьёнга Чермелейга. Леенть кувалмозо 20 [[Вайгельпе|вп]], покшолмазо весемезэ 59,7 вп². 
+Дожга лейнесь чуди [[Мордовия Республикась|Мордовиясо]]. Саи чудеме [[Найман веле (Покш Килейбуе)|Ташто Найман веленть]] пелеве-чилисема ёндо. Чуди лембес-чилисемас [[Вейца веле (Покш Килейбуе)|Вейца]] ды [[Шугур веле (Покш Килейбуе)|Шугур]] велетнева. Прамозо ашти 2,8 вп чиренть витьёнга Чермелейга. Леенть кувалмозо 20 [[Вайгельпе|вп]], покшолмазо весемезэ 59,7 вп². 
 
 == Леенть лемденть  ==
 Лемесь саеви тюрк. ''таш''<ref name="Память, запечатленная в слове"/> валонть эйстэ ({{Lang-ru|«камень, скала; возвышенность»}}). Улить топонимт<ref>Мурзаев Э. М. - Словарь народных географических терминов.- М.: Мысль, 1984.- 653 е., ил.{{ref-ru}} </ref> Таш, Ташла, Ташту, Акташ, Караташ ды лият Кавказссо,  Куншкань Азиясо ды Сибирьсэ.  
