*Empty MediaWiki Message*

--- a/Дожга_лей.mw
+++ b/Дожга_лей.mw
@@ -26,7 +26,7 @@
 Дожга лейнесь чуди [[Мордовия Республикась|Мордовиясо]]. Саи чудеме [[Найман веле (Покш Килейбуе)|Ташто Найман веленть]] пелеве-чилисема ёндо. Чуди лембес-чилисемас [[Вейца веле (Покш Килейбуе)|Вейца]] ды [[Шугур веле (Покш Килейбуе)|Шугур]] велетнева. Прамозо ашти 2,8 вп чиренть витьёнга Чермелейга. Леенть кувалмозо 20 [[Вайгельпе|вп]], покшолмазо весемезэ 59,7 вп². 
 
 == Леенть лемденть  ==
-Рузонь лемесь саеви тюрк. ''таш''<ref name="Память, запечатленная в слове"/> валонть эйстэ ({{Lang-ru|«камень, скала; возвышенность»}}). Улить топонимт<ref>Мурзаев Э. М. - Словарь народных географических терминов.- М.: Мысль, 1984.- 653 е., ил.{{ref-ru}} </ref> Таш, Ташла, Ташту, Акташ, Караташ ды лият Кавказссо,  Куншкань Азиясо ды Сибирьсэ.  
+[[Рузонь кель|Рузонь]] лемесь саеви тюрк. ''таш''<ref name="Память, запечатленная в слове"/> валонть эйстэ ({{Lang-ru|«камень, скала; возвышенность»}}). Улить топонимтт<ref>Мурзаев Э. М. - Словарь народных географических терминов.- М.: Мысль, 1984.- 653 е., ил.{{ref-ru}} </ref> Таш, Ташла, Ташту, Акташ, Караташ ды лият Кавказсо,  Куншкань Азиясо ды Сибирьсэ.  
 == Сёрм.: ==
 <references />
 [[Категория:Лейть|Д]]
