*Empty MediaWiki Message*

--- a/Мокша_(смустьтне).mw
+++ b/Мокша_(смустьтне).mw
@@ -3,7 +3,7 @@
 * [[Мокшот|мокшот]] — раське.
 * [[Мокша (журнал-ковставкс)|Мокша (ковставкс)]] — литературань-художественной ды вейсэнь-политикань ковставкс [[мокшонь кель]]сэ.
 
-;Топоним
+;Топонимт
 * [[Мокша (Торбейбуе)|Мокша]] — посёлка [[Торбейбуе]]сэ [[Мордовия]]со.
 * [[Мокша (Самара ёнкс)]] — веле [[Покш Глушицань буе]]сэ [[Самара ёнкс]]о.
 * [[Мокша (Татаронь Мастор)]] — веле Атнинэнь буесэ  [[Татаронь Республикась|Татаронь Масторсо]].
