--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -79,7 +79,7 @@
 [[1931 ие]]стэ Семилейсэ ульнесть 312 кудот (2100 ломанть). Теезь Сталинэнь лемсэ вейсхоз ({{Lang-ru| колхоз им. Сталина}}), [[1962 ие]]стэ —  Крупскаянь лемсэ ({{Lang-ru|им. Крупской}}), [[1998 ие]]стэ саезь — «Семилейень» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Семилейский»}}), саезь [[2000 ие]]стэ — агрофирмась «Норов» совицясь (кастыть одт-скотинат).
 
 == Ванмот ==
-* [http://www.youtube.com/watch?v=OQfk8aZRbMA Кизэнь тёкш Семилей велесэ - ванмось рузонь ды эрзянь кельсэ]
+* [http://www.youtube.com/watch?v=OQfk8aZRbMA Кизэнь тёкш Семилей велесэ - ванмось рузонь ды эрзянь кельсэ (ванмо)]
 
 == Сёрм.: ==
 <references />
