*Empty MediaWiki Message*

--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -64,7 +64,7 @@
 Ашти [[Вьяс лей]] лангсо. Кода лецтни ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Семилей (Никольское)  - 141 кудот марто Саранонь уездсэ. Ульнесь путозь од эрямо таркань вешницятнесэ Ташто Симилейстэ ({{Lang-ru|Старого Семилея}}). [[1913 ие]]нь ловноманть коряс Симилейсэ ульнесть 281 кудот (1956 лом.), 2 кузнят, ведьгев, 3 паронь ведьгевть ды 12 варма ведьгевть, 3 пивтема парть, 2 сюронь коськема таркат, 7 пивсэвтемат.  
 
 == Веленть лемденть  ==
-Лемесь-гидроним:  ''симема лей<ref>[http://mnogolik-mordovia.mrsu.ru/m_Semiley.htm Многоликая Мордовия: Село Семилей  {{Ref-ru}}]]</ref>'' ({{Lang-ru|речка; вода, которая пригодна для питья}}) — ведесь истямо ванькс лейсэнть, симть ды симть.
+Лемесь-гидроним:  ''симема лей<ref>[http://mnogolik-mordovia.mrsu.ru/m_Semiley.htm Многоликая Мордовия: Село Семилей  {{Ref-ru}}]</ref>'' ({{Lang-ru|речка; вода, которая пригодна для питья}}) — ведесь истямо ванькс лейсэнть, симть ды симть.
 
 == Содавикс ломанть те велестэнть ==
 Симилейсэ чачсть:
@@ -79,7 +79,7 @@
 [[1931 ие]]стэ Семилейсэ ульнесть 312 кудот (2100 ломанть). Теезь Сталинэнь лемсэ вейсхоз ({{Lang-ru| колхоз им. Сталина}}), [[1962 ие]]стэ —  Крупскаянь лемсэ ({{Lang-ru|им. Крупской}}), [[1998 ие]]стэ саезь — «Семилейень» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Семилейский»}}), саезь [[2000 ие]]стэ — агрофирмась «Норов» совицясь (кастыть одт-скотинат).
 
 == Ванмот ==
-* [http://www.youtube.com/watch?v=OQfk8aZRbMA Кизэнь тёкш Семилей велесэ - ванмось рузонь ды эрзянь кельсэ (ванмо)]
+* [http://www.youtube.com/watch?v=OQfk8aZRbMA Кизэнь тёкш Семилей велесэ - ванмось рузонь ды эрзянь кельсэ (ванмо) {{Ref-ru}}, {{Ref-myv}}]
 
 == Сёрм.: ==
 <references />
