*Empty MediaWiki Message*

--- a/Госагыр_веле_(Покш_Килейбуе).mw
+++ b/Госагыр_веле_(Покш_Килейбуе).mw
@@ -69,6 +69,13 @@
 Лемесь саеви рузонь ''косые горы''<ref name="Память, запечатленная в слове"/>, валрисьменть эйстэ (Ташто велесь ашти пандонть лангсо - {{Lang-ru|«Старая часть села  расположена на склоне холма»}}). 
 
 == Содавикс ломанть те велестэнть ==
+Госагырсэ чачсть:
+* С.Н. Леонтьев, И.С. Вдовин — Ине Отечественной ойнань улицятьне
+* Ю.Н. Серёжкин — физикэсь
+* З.А. Исайкина — тонавтыцясь
+* Л.И. Никонова — этнографось
+* В.И. Рогачёв — литератураньветицясь ды историкесь
+
 ==Таркат велесэнть==
 == Сёрм.: ==
 <references />
