--- a/Госагыр_веле_(Покш_Килейбуе).mw
+++ b/Госагыр_веле_(Покш_Килейбуе).mw
@@ -1,4 +1,3 @@
-<br />
 {{ЭТ
  |статус                  = веле
  |Эрзянь лем              = Госагыр
@@ -12,8 +11,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg =54.21 |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = 45.78|lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 54.211845|lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = 45.78006|lon_min = |lon_sec = 
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -53,8 +52,8 @@
  |почтовый индекс         = 431757
  |почтовые индексы        = 
  |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = 
+ |вид идентификатора      = ОКАТО
+ |цифровой идентификатор  = {{OKATO|}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
