--- a/Торбейбуе.mw
+++ b/Торбейбуе.mw
@@ -80,8 +80,8 @@
 * [[Мокша (Торбейбуе)|Мокша]] — ({{lang-ru|п. Мокша}})    
 * [[Мокшень Ювня (Торбейбуе)|Мокшень Ювня]] — ({{lang-ru|с. Мордовские Юнки}})   
 * [[Малышу (Торбейбуе)|Малышу]] — ({{lang-ru|д. Малышево}})   
-* [[Носак веле (Торбейбуе)|Носак веле]] — ({{lang-ru|с. Носакино}})   
-* [[Сава веле (Торбейбуе)|Сава веле]] — ({{lang-ru|с. Савва}})   
+* [[Носак (Торбейбуе)|Носак]] — ({{lang-ru|с. Носакино}})   
+* [[Сава (Торбейбуе)|Сава]] — ({{lang-ru|с. Савва}})   
 * [[Салазгерьге (Торбейбуе)|Салазгерьге]] — ({{lang-ru|с. Салазгорь}})   
 * [[Селижай (Торбейбуе)|Селижай]] — ({{lang-ru|д. Селижай}})   
 * [[Сире Пяцера (Торбейбуе)|Сире Пяцера]] — ({{lang-ru|с. Старые Пичуры}})   
@@ -98,18 +98,18 @@
 * [[Виндрей (Торбейбуе)|Виндрей]] — ({{lang-ru|c. Виндрей}})
 * [[Жуково (Торбейбуе)|Жуково]] — ({{lang-ru|c. Жуково}})
 * [[Красаевка (Торбейбуе)|Красаевка]] — ({{lang-ru|c. Красаевка}})
-* [[Красная Поляна (Торбейбуе)|Красная Поляна]] — ({{lang-ru|д. Красная Поляна}})
+* [[Красной Поляна (Торбейбуе)|Красной Поляна]] — ({{lang-ru|д. Красная Поляна}})
 * [[Засецкое (Торбейбуе)|Засецкое]] — ({{lang-ru|д. Засецкое}})
 * [[Карпеловка (Торбейбуе)|Карпеловка]] — ({{lang-ru|д. Карпеловка}})
 * [[Козловка (Торбейбуе)|Козловка]] — ({{lang-ru|д. Козловка}})
-* [[Красноармейский (Торбейбуе)|Красноармейский]] — ({{lang-ru|п. Красноармейский}})
+* [[Красноармейской (Торбейбуе)|Красноармейской]] — ({{lang-ru|п. Красноармейский}})
 * [[Краснополье (Торбейбуе)|Краснополье]] — ({{lang-ru|c. Краснополье}})
 * [[Мальцево (Торбейбуе)|Мальцево]] — ({{lang-ru|c. Мальцево}})
 * [[Маяк (Торбейбуе)|Маяк]] — ({{lang-ru|п. Маяк}})
 * [[Московка (Торбейбуе)|Московка]] — ({{lang-ru|с. Московка}})
 * [[Моховая Рахманка (Торбейбуе)|Моховая Рахманка]] — ({{lang-ru|с. Моховая Рахманка}})
 * [[Никольское (Торбейбуе)|Никольское]] — ({{lang-ru|с. Никольское}})
-* [[Первомайский (Торбейбуе)|Первомайский]] — ({{lang-ru|п. Первомайский}})
+* [[Первомайской (Торбейбуе)|Первомайской]] — ({{lang-ru|п. Первомайский}})
 * [[Покровские Выселки (Торбейбуе)|Покровские Выселки]] — ({{lang-ru|д. Покровские Выселки}})
 * [[Решетино (Торбейбуе)|Решетино]] — ({{lang-ru|с. Решетино}})
 * [[Саввинские Выселки (Торбейбуе)|Саввинские Выселки]] — ({{lang-ru|д. Саввинские Выселки}})
@@ -126,14 +126,14 @@
 эрзянь велеть:
 * [[Дракина (Торбейбуе)|Дракина]] — ({{lang-ru|с. Дракино}})
 * [[Кажлодка (Торбейбуе)|Кажлодка]] — ({{lang-ru|с. Кажлодка}})
-* [[Майский (Торбейбуе)|Майский]] — ({{lang-ru|п. Майский}})
+* [[Майской (Торбейбуе)|Майской]] — ({{lang-ru|п. Майский}})
       
 печкасонь велеть:
 * [[Cургодь (Торбейбуе)|Cургодь]] — ({{lang-ru|с. Cургодь}}, ({{lang-tt|Sırqıdı, Сыркыды}})
 * [[Татарские Юнки (Торбейбуе)|Татарские Юнки]] — ({{lang-ru|с. Татарские Юнки}}, ({{lang-tt|Енә авыл}})
 
 човор велеть:
-* [[Центральный (Торбейбуе)|Центральный]] — ({{lang-ru|п. Центральный}})
+* [[Центральной (Торбейбуе)|Центральной]] — ({{lang-ru|п. Центральный}})
 
 == Сёрм.: ==
 * [http://mnogolik-mordovia.mrsu.ru/u_20.htm  Многоликая Мордовия:Список населенных пунктов Торбеевского района]{{Ref-ru}}
