*Empty MediaWiki Message*

--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -61,7 +61,7 @@
 }}
 '''Симилей''' ({{Lang-ru|Семилей}}) — те эрзянь веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
 
-Ашти [[Вьяс лей]] лангсо. Кода лецтни ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Семилей (Никольское)  - 141 кудот марто Саранонь уездсэ. Ульнесь путозь од эрямо таркань вешницятнесэ Ташто Симилейстэ ({{Lang-ru|Старого Семилея}}). [[1913 ие]]нь ловноманть коряс Симилейсэ ульнесть 281 кудот (1956 лом.), 2 кузнят, ведьгев, 3 паронь ведьгевть ды 12 варма ведьгевть, 3 пивтема парть, 2 сюронь коськема таркат, 7 пивсэвтемат.  
+Ашти [[Авяз|Вьяс лей]] лангсо. Кода лецтни ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Семилей (Никольское)  - 141 кудот марто Саранонь уездсэ. Ульнесь путозь од эрямо таркань вешницятнесэ Ташто Симилейстэ ({{Lang-ru|Старого Семилея}}). [[1913 ие]]нь ловноманть коряс Симилейсэ ульнесть 281 кудот (1956 лом.), 2 кузнят, ведьгев, 3 паронь ведьгевть ды 12 варма ведьгевть, 3 пивтема парть, 2 сюронь коськема таркат, 7 пивсэвтемат.  
 
 == Веленть лемденть  ==
 Лемесь-гидроним:  ''симема лей<ref>[http://mnogolik-mordovia.mrsu.ru/m_Semiley.htm Многоликая Мордовия: Село Семилей  {{Ref-ru}}]</ref>'' ({{Lang-ru|речка; вода, которая пригодна для питья}}) — ведесь истямо ванькс лейсэнть, симть ды симть.
