*Empty MediaWiki Message*

--- a/Авяз.mw
+++ b/Авяз.mw
@@ -21,7 +21,7 @@
   |Ёнкст                   = Пенза ёнкс/Мордовия Республикась
    |Буе                   =
 }}
-'''Авяз<ref name="Память, запечатленная в слове"/>''' {{Lang-ru|Вьяс}} — кершёнонь [[Сура лей|Сура леенть]] сянглей. 
+'''Авяз<ref name="Память, запечатленная в слове"/>''' ({{Lang-ru|Вьяс}}) — кершёнонь [[Сура лей|Сура леенть]] сянглей. 
 
 Чуди [[Пенза ёнкс]]ка ды [[Мордовия Республикась|Мордовиясо]]. Леенть кувалмозо 51 [[Вайгельпе|вп]], покшолмазо весемезэ 422 вп². 
 
