*Empty MediaWiki Message*

--- a/Авяз.mw
+++ b/Авяз.mw
@@ -1,6 +1,6 @@
 {{Лей
  |Лем                     = Авяз лей
-  |Эсьлем                 = {{Lang-ru|Вьяс}}
+  |Эсьлем                 = ru/Вьяс
  |Артовкс                 = 
   |артовксонть эйсте      = Река Вьяс.jpg
  |Кувалма                 = 51
