--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -40,7 +40,7 @@
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               =  796
+  |эрицятне               =  721
   |год переписи           = 2001
   |плотность              = 
   |агломерация            = 
@@ -59,9 +59,9 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Симилей''' ({{Lang-ru|Семилей}}) — те эрзянь веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
+'''Симилей''' ({{Lang-ru|Семилей<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref>}}) — те эрзянь веле [[Мордовия Республикась|Мордовия Республикань]] [[Кочкурбуе|Кочкурбуесэ]].
 
-Ашти [[Авяз|Вьяс лей]] лангсо. Кода лецтни ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Семилей (Никольское)  - 141 кудот марто Саранонь уездсэ. Ульнесь путозь од эрямо таркань вешницятнесэ Ташто Симилейстэ ({{Lang-ru|Старого Семилея}}). [[1913 ие]]нь ловноманть коряс Симилейсэ ульнесть 281 кудот (1956 лом.), 2 кузнят, ведьгев, 3 паронь ведьгевть ды 12 варма ведьгевть, 3 пивтема парть, 2 сюронь коськема таркат, 7 пивсэвтемат.  
+Ашти [[Авяз|Вьяс лей]] лангсо. Кода лецтни ({{Lang-ru|Списке населенных мест Пензенской губернии}}) ([[1869 ие]]) Семилей (Никольское)  - 141 кудот марто Саранонь уездсэ. Ульнесь путозь од эрямо таркань вешницятнесэ Ташто Симилейстэ ({{Lang-ru|Старого Семилея}}).
 
 == Веленть лемденть  ==
 Лемесь-гидроним:  ''симема лей<ref>[http://mnogolik-mordovia.mrsu.ru/m_Semiley.htm Многоликая Мордовия: Село Семилей  {{Ref-ru}}]</ref>'' ({{Lang-ru|речка; вода, которая пригодна для питья}}) — ведесь истямо ванькс лейсэнть, симть ды симть.
@@ -76,7 +76,10 @@
 * В.М. Четайкина — микшнемань важодиця
 
 == Веленть эрямозо  ==
+[[1913 ие]]нь ловноманть коряс Симилейсэ ульнесть 281 кудот (1956 лом.), 2 кузнят, ведьгев, 3 паронь ведьгевть ды 12 варма ведьгевть, 3 пивтема парть, 2 сюронь коськема таркат, 7 пивсэвтемат.  
 [[1931 ие]]стэ Семилейсэ ульнесть 312 кудот (2100 ломанть). Теезь Сталинэнь лемсэ вейсхоз ({{Lang-ru| колхоз им. Сталина}}), [[1962 ие]]стэ —  Крупскаянь лемсэ ({{Lang-ru|им. Крупской}}), [[1998 ие]]стэ саезь — «Семилейень» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Семилейский»}}), саезь [[2000 ие]]стэ — агрофирмась «Норов» совицясь (кастыть одт-скотинат).
+
+Эрицятнеде: 1913 ие -1956 лом.,  1931 ие -2100 лом., 2001 ие - 796 лом., 2010 - 721 лом.
 
 == Ванмот ==
 * [http://www.youtube.com/watch?v=OQfk8aZRbMA Кизэнь тёкш Семилей велесэ - ванмось рузонь ды эрзянь кельсэ (ванмо) {{Ref-ru}}, {{Ref-myv}}]
