--- a/Госагыр_веле_(Покш_Килейбуе).mw
+++ b/Госагыр_веле_(Покш_Килейбуе).mw
@@ -63,11 +63,6 @@
 Ашти [[Семилейка]] лангсо, кона Большая Кша леенть сянглей. Кода лецтяви ({{Lang-ru|«Списке населенных мест Симбирской губернии»}}) ([[1863 ие]]) Никольское (Старые Косогоры) – веле 316 кудот марто Ордань уездсэ.
 
 Эрицятнеде: [[2001 ие]]стэ ульнесь 567 лом., 2010 иень ловномасонть кадовсть 384 ломанть. 
-
-[[1931 ие]]нь ушодомастонть велесэ ульнесь теезь 8 вейсхозт, [[1950 ие]]стэ — вейсхоз «Луч Правды»,  [[1997 ие]]стэ —  «Косогоронь» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Косогорский»}}). 
-
-Велесэнть — куншкань тонавтнема школа, Шкинемань кудо, медицинань тарка, ловномакудо, микшнема лавка, Никольской церькова (архитектурань теевкс 2-це пельксэнть [[XIX пинге|XIX п.]]).
-
 == Веленть лемденть  ==
 Лемесь саеви рузонь ''косые горы''<ref name="Память, запечатленная в слове"/>, валрисьменть эйстэ (Ташто велесь ашти пандонть лангсо - {{Lang-ru|«Старая часть села  расположена на склоне холма»}}). 
 
@@ -78,6 +73,11 @@
 * З.А. Исайкина — тонавтыцясь
 * Л.И. Никонова — этнографось
 * В.И. Рогачёв — литератураньветицясь ды историкесь
+
+== Веленть эрямозо  ==
+[[1931 ие]]нь ушодомастонть велесэ ульнесь теезь 8 вейсхозт, [[1950 ие]]стэ — вейсхоз «Луч Правды»,  [[1997 ие]]стэ —  «Косогоронь» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Косогорский»}}). 
+
+Велесэнть — куншкань тонавтнема школа, Шкинемань кудо, медицинань тарка, ловномакудо, микшнема лавка, Никольской церькова (архитектурань теевкс 2-це пельксэнть [[XIX пинге|XIX п.]]).
 
 ==Таркат велесэнть==
 == Сёрм.: ==
