Replacing Seal_of_Washington,_D.C..svg with [[File:Seal_of_Washington,_D.C.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: [[:commons:COM:FR#reasons|File renaming criterion #6]]: Non-controversial main

--- a/Вашингтон_ош.mw
+++ b/Вашингтон_ош.mw
@@ -5,7 +5,7 @@
  |изображение             = DCmontage3.jpg
  |подчинение              = 
  |мастор                  = Американь Вейтьсэндявкс Штаттнэ
- |герб                    = Seal of Washington, D.C..svg
+ |герб                    = Seal of Washington, D.C.svg
  |коцт                    = Flag of Washington, D.C..svg
  |описание герба          = 
  |описание флага          = 
