*Empty MediaWiki Message*

--- a/Ташто_Найман_веле_(Покш_Килейбуе).mw
+++ b/Ташто_Найман_веле_(Покш_Килейбуе).mw
@@ -32,7 +32,7 @@
  |вид главы               = 
  |глава                   = 
  |дата основания          = 
- |первое упоминание       = 1863 ие
+ |первое упоминание       = 1614 ие
  |прежние имена           = 
  |статус с                = 
  |покшолмазо              = 
@@ -68,12 +68,24 @@
 == Веленть лемденть  ==
 Лемесь-этноним: тюрконь ''найман'' ({{Lang-ru|«народность», «название одного из тюркских племен<ref name="Память, запечатленная в слове"/>»}}) валонть эйстэ. 
 
+Ули лия арсема веленть лемденть. Содазь, коли-коли эрзянь велетне кандыть а чарькодевиця лемть. И кой-зярдо мельс сакшны истямо арсема — а косто появась ''Найман'' веленть лемесь? Кой-кона велетне кандыть [[Лей|леень]] лемть, конань вакссо сынь сравтовозь; лиятне — пандонь ды седе тов. 
+Те велесь, кона ашти [[2 (кавто)|кавто]] а покш пандо юткссо, латко шушмосо, кувалмонзо чуди а покшке лейне — канды лем Найман. 
+
+Сыре бабинетне кортнесть, сонзе лемесь лиссь истя:
+{{Цитатань ушодома}}
+умонь шкасто ютась минек латконть трокс рузонь воевода, конась несь а покш семия, кекшезь шушмосонть эйстэст. Зярдо воеводась мольсь малазост-тандавтозь ломантненень, кевкстизе [[Рузонь кель|рузонь кельсэ]] — кить сынь. Серьгедеманзо каршо пилезэнзэ каятотсь лем Найман — истямо лем кандсь сехте сыре атя. Тень мейле монь чачома тарканте кармасть мереме Найман веле.
+{{Цитатань пе}}
+
 ==Содавикс ломанть те велестэнть==
 Ташто Найман велесэ чачсть:
 * [[Абрамов, Кузьма Григорьевич|Абрамовонь Кузьма]] (1914—2008) — эрзянь содавикс сёрмадей.
 * [[Коломасов, Василий Максимович|Коломасовонь Василий]]  (1909—1987) — эрзянь советэнь сёрмадей.
 == Веленть эрямозо  ==
 [[XIX пинге|XIX п.]] прядомсто — [[XX пинге|XX п.]] ушодомсто велесэнть тейнесть [[чувтт|чувтонь]] [[койме]]ть, [[нешке]]нь кудот. [[1929 ие]]стэ ульнесь теезь вейсхоз «Од ки» ({{Lang-ru|«Новый путь»}}), [[1996 ие]]стэ — «Старонайманонь» вельхозяйствань производствань пурнавкс ({{Lang-ru|СХПК «Старонайманский»}}), [[1998 ие]]стэ саезь — 2 К(Ф)Х. Неень шкасто велесэнть — куншкань тонавтнема школа, ловнома кудо, Шкинемань кудо, медицинань тарка, лавка.
+
+== Лия ёнкссо истя лем ало ==
+Ули  [[Ульянонь ёнкс|Ульяновскоень масторсо]]  Павловкань веле - лемезе  Найман веле.
+
 
 == Сёрм.: ==
 <references />
