--- a/Найман_веле_(Покш_Килейбуе).mw
+++ b/Найман_веле_(Покш_Килейбуе).mw
@@ -1,81 +1,1 @@
-<br />
-{{ЭТ
- |статус                  = веле
- |Эрзянь лем              = Найман веле
- |оригинальное название   = {{Lang-ru|Старые Найманы}}
- |изображение             = 
- |подчинение              = 
- |мастор                  = Россия
- |герб                    = 
- |коцт                    = 
- |описание герба          = 
- |описание флага          = 
- |ширина герба            = 
- |ширина флага            = 
-  |lat_dir = |lat_deg = 54|lat_min = 16|lat_sec = 
-  |lon_dir = |lon_deg = 45|lon_min = 56|lon_sec = 
-  |CoordAddon             = 
-  |CoordScale             = 
- |размер карты страны     = 
- |размер карты региона    = 
- |размер карты района     = 
- |вид региона             = республикась
- |регион                  = Мордовия Республикась
- |регион в таблице        = Мордовия Республикась {{!}} Мордовия
- |вид района              = буе
- |район                   = Покш Килейбуе
- |район в таблице         = Покш Килейбуе {{!}} Покш Килейбуе
- |вид общины              = 
- |община                  = 
- |община в таблице        = 
- |внутреннее деление      = 
- |вид главы               = велень прявт
- |глава                   =
- |дата основания          =  
- |первое упоминание       = 1614
- |прежние имена           = 
- |статус с                = 
- |покшолмазо              = 
- |вид высоты              = 
- |высота центра НП        = 
- |климат                  = 
- |официальный язык        = 
-  |эрицятне               = 765 
-  |год переписи           = 2001
-  |плотность              = 
-  |агломерация            = 
-  |национальный состав    = [[эрзят]]
-  |конфессиональный состав= 
-  |этнохороним            = 
- |часовой пояс            = +3
- |DST                     = 
- |телефонный код          = 
- |почтовый индекс         = 431810
- |почтовые индексы        = 
- |автомобильный код       = 13
- |вид идентификатора      = 
- |цифровой идентификатор  = 
- |категория в Commons     = 
- |сайт                    = 
- |язык сайта              = 
-}}
-'''На́йман ве́ле''' (лиякс кортыть: Ташто Найман, Эрзянь Найман) ({{Lang-ru|Старые Найманы}})  — те эрзянь веле [[Мордовия Республикась|Мордовиянь]] [[Покш Килейбуе]]сэ.
-
-== Веленть лемденть  ==
-Содазь, коли-коли эрзянь велетне кандыть а чарькодевиця лемть. И кой-зярдо мельс сакшны истямо арсема — а косто появась ''Найман'' веленть лемесь? Кой-кона велетне кандыть [[Лей|леень]] лемть, конань вакссо сынь сравтовозь; лиятне — пандонь ды седе тов. 
-Те велесь, кона ашти [[2 (кавто)|кавто]] а покш пандо юткссо, латко шушмосо, кувалмонзо чуди а покшке лейне — канды лем Найман. 
-
-Сыре бабинетне кортнесть, сонзе лемесь лиссь истя:
-{{Цитатань ушодома}}
-умонь шкасто ютась минек латконть трокс рузонь воевода, конась несь а покш семия, кекшезь шушмосонть эйстэст. Зярдо воеводась мольсь малазост-тандавтозь ломантненень, кевкстизе [[Рузонь кель|рузонь кельсэ]] — кить сынь. Серьгедеманзо каршо пилезэнзэ каятотсь лем Найман — истямо лем кандсь сехте сыре атя. Тень мейле монь чачома тарканте кармасть мереме Найман веле.
-{{Цитатань пе}}
-
-== Содавикс ломанть те велестэнть ==
-Сыре Найман велесэ чачсть эрзянь содавикс сёрмадейть — [[Абрамовонь, Кузьма Григорьевичесь|Абрамовонь Кузьма Григорьевичесь]] ([[1914 ие]]), ды [[Коломасовонь, Василий Максимович|Коломасовонь Василий Максимович]] ([[1909 ие]]).
-
-== Лия ёнкссо истя лем ало ==
-Ули  [[Ульянонь ёнкс|Ульяновскоень масторсо]]  Павловкань веле - лемезе  Найман веле.
-
-[[Category:Мордовиянь велеть|Н]]
-[[Category:Покш Килейбуень велеть|Н]]
-[[Category:Эрзянь велеть]]
+#перенаправление [[Ташто Найман веле (Покш Килейбуе)]]
