*Empty MediaWiki Message*

--- a/Госагыр_веле_(Покш_Килейбуе).mw
+++ b/Госагыр_веле_(Покш_Килейбуе).mw
@@ -53,7 +53,7 @@
  |почтовые индексы        = 
  |автомобильный код       = 13
  |вид идентификатора      = ОКАТО
- |цифровой идентификатор  = {{OKATO|}}
+ |цифровой идентификатор  = {{ОКАТО|}}
  |категория в Commons     = 
  |сайт                    = 
  |язык сайта              = 
