--- a/Сухум_ош.mw
+++ b/Сухум_ош.mw
@@ -1,4 +1,65 @@
-[[Артовкс:Coat of Arms of Sukhum.jpg|thumb|right|Сухумонь гербесь]]
-'''Сухум''' — те [[Абхазия Мастор|Абхазиянь]] прявтошось.
+
+{{ЭТ
+ |статус                  = Ош
+ |Эрзянь лем              = Рига
+ |оригинальное название   = 
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = Грузия Мастор
+ |герб                    = Coat of Arms of Sukhum.jpg
+ |коцт                    = Flag_of_Riga.svg{{!}}border
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = 
+ |регион                  = 
+ |регион в таблице        = 
+ |вид района              = 
+ |район                   = 
+ |район в таблице         = 
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = 
+ |глава                   =
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра ЭТ        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 
+  |год переписи           = 
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |шкань каркс             = 
+ |DST                     = 
+ |телефонный код          = 
+ |почтовый индекс         = 
+ |почтовые индексы        = 
+ |автомобильный код       = 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = 
+ |сайт                    = 
+ |язык сайта              = 
+}}
+
+'''Сухум''' — те [[Абхазия Мастор|Абхазиянь]] прявтонь куншка, [[Грузия Мастор]]со.
 
 [[Категория:Прявтошт]]
