*Empty MediaWiki Message*

--- a/Сухум_ош.mw
+++ b/Сухум_ош.mw
@@ -1,13 +1,13 @@
 
 {{ЭТ
  |статус                  = Ош
- |Эрзянь лем              = Рига
+ |Эрзянь лем              = Сухуми
  |оригинальное название   = 
  |изображение             = 
  |подчинение              = 
  |мастор                  = Грузия Мастор
  |герб                    = Coat of Arms of Sukhum.jpg
- |коцт                    = Flag_of_Riga.svg{{!}}border
+ |коцт                    = 
  |описание герба          = 
  |описание флага          = 
  |ширина герба            = 
