*Empty MediaWiki Message*

--- a/Сухум_ош.mw
+++ b/Сухум_ош.mw
@@ -12,8 +12,8 @@
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |lat_dir = |lat_deg = 43|lat_min = 00|lat_sec = 12
+  |lon_dir = |lon_deg = 41|lon_min = 00|lon_sec = 55
   |CoordAddon             = 
   |CoordScale             = 
  |размер карты страны     = 
@@ -34,29 +34,29 @@
  |дата основания          = 
  |первое упоминание       = 
  |прежние имена           = 
- |статус с                = 
+ |статус с                = 1848 ие
  |покшолмазо              = 
  |вид высоты              = 
  |высота центра ЭТ        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 
-  |год переписи           = 
+  |эрицятне               = 62 914
+  |год переписи           = 2011
   |плотность              = 
   |агломерация            = 
   |национальный состав    = 
   |конфессиональный состав= 
   |этнохороним            = 
- |шкань каркс             = 
+ |шкань каркс             = +3
  |DST                     = 
  |телефонный код          = 
- |почтовый индекс         = 
+ |почтовый индекс         = 384900
  |почтовые индексы        = 
  |автомобильный код       = 
  |вид идентификатора      = 
  |цифровой идентификатор  = 
  |категория в Commons     = 
- |сайт                    = 
+ |сайт                    = http://www.sukhumcity.ru/
  |язык сайта              = 
 }}
 
