--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -30,6 +30,39 @@ MSKS=0|
 
 '''Воронежень ёнкс''' ({{lang-ru|Воронежская область}}) — ашти [[Россия Мастор|Россия Масторсо]]. Ёнксонть куншка ош — [[Воронеж ош|Воронеж ошось]].
 
+==Воренежэнь ёнксонь буетне ==
+# [[Аннань буе (Воронежень ёнкс)|Аннань буе]]
+# [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]]
+# [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]]
+# [[Веремамононь буе(Воронежень ёнкс)|Веремамононь буе]]
+# [[Верехавонь буе (Воронежень ёнкс)|Верехавонь буе]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+
 {{Куншкань федерациянь кужось}}
 <br clear="all">
 {{Россия Масторонть масторпелькстнэ}}
