/* Воренежэнь ёнксонь буетне */

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -35,7 +35,7 @@ MSKS=0|
 # [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]]
 # [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]]
 # [[Веремамононь буе(Воронежень ёнкс)|Веремамононь буе]]
-# [[Верехавонь буе (Воронежень ёнкс)|Верехавонь буе]]
+# [[Верехавань буе (Воронежень ёнкс)|Верехавань буе]]
 # [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
 # [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
 # [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
