/* Воренежэнь ёнксонь буетне */

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -30,38 +30,40 @@ MSKS=0|
 
 '''Воронежень ёнкс''' ({{lang-ru|Воронежская область}}) — ашти [[Россия Мастор|Россия Масторсо]]. Ёнксонть куншка ош — [[Воронеж ош|Воронеж ошось]].
 
-==Воренежэнь ёнксонь буетне ==
+==Воренежень ёнксонь буетне ==
 # [[Аннань буе (Воронежень ёнкс)|Аннань буе]]
 # [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]]
 # [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]]
+# [[Бутурлиновкань (Воронежень ёнкс)|Бутурлиновкань буе]]
 # [[Веремамононь буе(Воронежень ёнкс)|Веремамононь буе]]
 # [[Верехавань буе (Воронежень ёнкс)|Верехавань буе]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
-# [[(Воронежень ёнкс)|(Воронежень ёнкс)]]
+# [[Воробьёвкань буе (Воронежень ёнкс)|Воробьёвкань буе]]
+# [[Грибановкань буе (Воронежень ёнкс)|Грибановкань буе]]
+# [[Калачонь буе (Воронежень ёнкс)|Калачонь буе]]
+# [[Каменкань буе(Воронежень ёнкс)|Каменкань буе]]
+# [[Кантемировкань буе (Воронежень ёнкс)|Кантемировкань буе]]
+# [[Каширскоень буе (Воронежень ёнкс)|Каширскоень буе]]
+# [[Лискинь буе (Воронежень ёнкс)|Лискинь буе]]
+# [[Нижнедевицкоень буе(Воронежень ёнкс)|Нижнедевицкоень буе(Воронежень ёнкс)]]
+# [[Одусманень буе(Воронежень ёнкс)|Одусманень буе]]
+# [[Новохопёрскоень буе (Воронежень ёнкс)|Новохопёрскоень буе]]
+# [[Ольховаткань буе (Воронежень ёнкс)|Ольховаткань буе]]
+# [[Острогожскоень буе (Воронежень ёнкс)|Острогожскоень буе]]
+# [[Павловскоень буе (Воронежень ёнкс)|Павловскоень буе]]
+# [[Панинонь буе(Воронежень ёнкс)|Панинонь буе]]
+# [[Петропавловкань буе (Воронежень ёнкс)|Петропавловкань буе]]
+# [[Поворинонь буе (Воронежень ёнкс)|Поворинонь буе]]
+# [[Подгоренскоень буе (Воронежень ёнкс)|Подгоренскоень буе]]
+# [[Рамонень буе(Воронежень ёнкс)|Рамонень буе]]
+# [[Репьёвкань буе (Воронежень ёнкс)|Репьёвкань буе]]
+# [[Россошень буе (Воронежень ёнкс)|Россошень буе(Воронежень ёнкс)]]
+# [[Семилукинь буе (Воронежень ёнкс)|Семилукинь буе (Воронежень ёнкс)]]
+# [[Таловоень буе (Воронежень ёнкс)|Таловоень буе]]
+# [[Терновкань буе(Воронежень ёнкс)|Терновкань буе]]
+# [[Хохольскоень буе(Воронежень ёнкс)|Хохольскоень буе]]
+# [[Эртилень буе(Воронежень ёнкс)|Эртилень буе]]
+
+
 
 {{Куншкань федерациянь кужось}}
 <br clear="all">
