/* Воренежень ёнксонь буетне */

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -30,7 +30,7 @@ MSKS=0|
 
 '''Воронежень ёнкс''' ({{lang-ru|Воронежская область}}) — ашти [[Россия Мастор|Россия Масторсо]]. Ёнксонть куншка ош — [[Воронеж ош|Воронеж ошось]].
 
-==Воренежень ёнксонь буетне ==
+==Воронежень ёнксонь буетне ==
 # [[Аннань буе (Воронежень ёнкс)|Аннань буе]]
 # [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]]
 # [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]]
@@ -44,7 +44,7 @@ MSKS=0|
 # [[Кантемировкань буе (Воронежень ёнкс)|Кантемировкань буе]]
 # [[Каширскоень буе (Воронежень ёнкс)|Каширскоень буе]]
 # [[Лискинь буе (Воронежень ёнкс)|Лискинь буе]]
-# [[Нижнедевицкоень буе(Воронежень ёнкс)|Нижнедевицкоень буе(Воронежень ёнкс)]]
+# [[Нижнедевицкоень буе(Воронежень ёнкс)|Нижнедевицкоень буе]]
 # [[Одусманень буе(Воронежень ёнкс)|Одусманень буе]]
 # [[Новохопёрскоень буе (Воронежень ёнкс)|Новохопёрскоень буе]]
 # [[Ольховаткань буе (Воронежень ёнкс)|Ольховаткань буе]]
@@ -56,14 +56,12 @@ MSKS=0|
 # [[Подгоренскоень буе (Воронежень ёнкс)|Подгоренскоень буе]]
 # [[Рамонень буе(Воронежень ёнкс)|Рамонень буе]]
 # [[Репьёвкань буе (Воронежень ёнкс)|Репьёвкань буе]]
-# [[Россошень буе (Воронежень ёнкс)|Россошень буе(Воронежень ёнкс)]]
-# [[Семилукинь буе (Воронежень ёнкс)|Семилукинь буе (Воронежень ёнкс)]]
+# [[Россошень буе (Воронежень ёнкс)|Россошень буе]]
+# [[Семилукинь буе (Воронежень ёнкс)|Семилукинь буе]]
 # [[Таловоень буе (Воронежень ёнкс)|Таловоень буе]]
 # [[Терновкань буе(Воронежень ёнкс)|Терновкань буе]]
 # [[Хохольскоень буе(Воронежень ёнкс)|Хохольскоень буе]]
 # [[Эртилень буе(Воронежень ёнкс)|Эртилень буе]]
-
-
 
 {{Куншкань федерациянь кужось}}
 <br clear="all">
