/* Воронежень ёнксонь буетне */ паряк эряви рузоксгак максомс лемест?!

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -31,37 +31,37 @@ MSKS=0|
 '''Воронежень ёнкс''' ({{lang-ru|Воронежская область}}) — ашти [[Россия Мастор|Россия Масторсо]]. Ёнксонть куншка ош — [[Воронеж ош|Воронеж ошось]].
 
 ==Воронежень ёнксонь буетне ==
-# [[Аннань буе (Воронежень ёнкс)|Аннань буе]]
-# [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]]
-# [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]]
-# [[Бутурлиновкань (Воронежень ёнкс)|Бутурлиновкань буе]]
-# [[Веремамононь буе(Воронежень ёнкс)|Веремамононь буе]]
-# [[Верехавань буе (Воронежень ёнкс)|Верехавань буе]]
-# [[Воробьёвкань буе (Воронежень ёнкс)|Воробьёвкань буе]]
-# [[Грибановкань буе (Воронежень ёнкс)|Грибановкань буе]]
-# [[Калачонь буе (Воронежень ёнкс)|Калачонь буе]]
-# [[Каменкань буе(Воронежень ёнкс)|Каменкань буе]]
-# [[Кантемировкань буе (Воронежень ёнкс)|Кантемировкань буе]]
-# [[Каширскоень буе (Воронежень ёнкс)|Каширскоень буе]]
-# [[Лискинь буе (Воронежень ёнкс)|Лискинь буе]]
-# [[Нижнедевицкоень буе(Воронежень ёнкс)|Нижнедевицкоень буе]]
-# [[Одусманень буе(Воронежень ёнкс)|Одусманень буе]]
-# [[Новохопёрскоень буе (Воронежень ёнкс)|Новохопёрскоень буе]]
-# [[Ольховаткань буе (Воронежень ёнкс)|Ольховаткань буе]]
-# [[Острогожскоень буе (Воронежень ёнкс)|Острогожскоень буе]]
-# [[Павловскоень буе (Воронежень ёнкс)|Павловскоень буе]]
-# [[Панинонь буе(Воронежень ёнкс)|Панинонь буе]]
-# [[Петропавловкань буе (Воронежень ёнкс)|Петропавловкань буе]]
-# [[Поворинонь буе (Воронежень ёнкс)|Поворинонь буе]]
-# [[Подгоренскоень буе (Воронежень ёнкс)|Подгоренскоень буе]]
-# [[Рамонень буе(Воронежень ёнкс)|Рамонень буе]]
-# [[Репьёвкань буе (Воронежень ёнкс)|Репьёвкань буе]]
-# [[Россошень буе (Воронежень ёнкс)|Россошень буе]]
-# [[Семилукинь буе (Воронежень ёнкс)|Семилукинь буе]]
-# [[Таловоень буе (Воронежень ёнкс)|Таловоень буе]]
-# [[Терновкань буе(Воронежень ёнкс)|Терновкань буе]]
-# [[Хохольскоень буе(Воронежень ёнкс)|Хохольскоень буе]]
-# [[Эртилень буе(Воронежень ёнкс)|Эртилень буе]]
+# [[Аннань буе (Воронежень ёнкс)|Аннань буе]] -  ({{lang-ru|Аннинский район}})
+# [[Бобровонь буе (Воронежень ёнкс)|Бобровонь буе]] -  ({{lang-ru|Бобровский район}})
+# [[Богучаронь буе (Воронежень ёнкс)|Богучаронь буе]] -  ({{lang-ru|Богучарский район}})
+# [[Бутурлиновкань (Воронежень ёнкс)|Бутурлиновкань буе]] -  ({{lang-ru|Бутурлиновский район}})
+# [[Веремамононь буе(Воронежень ёнкс)|Веремамононь буе]] -  ({{lang-ru|Верхнемамонский район}})
+# [[Верехавань буе (Воронежень ёнкс)|Верехавань буе]] -  ({{lang-ru|Верхнехавский район}})
+# [[Воробьёвкань буе (Воронежень ёнкс)|Воробьёвкань буе]] -  ({{lang-ru|Воробьёвский район}})
+# [[Грибановкань буе (Воронежень ёнкс)|Грибановкань буе]] -  ({{lang-ru|Грибановский район}})
+# [[Калачонь буе (Воронежень ёнкс)|Калачонь буе]] -  ({{lang-ru|Калачеевский район}})
+# [[Каменкань буе(Воронежень ёнкс)|Каменкань буе]] -  ({{lang-ru|Каменский район}})
+# [[Кантемировкань буе (Воронежень ёнкс)|Кантемировкань буе]] -  ({{lang-ru|Кантемировский район}})
+# [[Каширскоень буе (Воронежень ёнкс)|Каширскоень буе]] -  ({{lang-ru|Каширский район}})
+# [[Лискинь буе (Воронежень ёнкс)|Лискинь буе]] -  ({{lang-ru|Лискинский район}})
+# [[Нижнедевицкоень буе (Воронежень ёнкс)|Нижнедевицкоень буе]] -  ({{lang-ru|Нижнедевицкий район}})
+# [[Одусманонь буе (Воронежень ёнкс)|Одусманонь буе]] -  ({{lang-ru|Новоусманский район}})
+# [[Новохопёронь буе (Воронежень ёнкс)|Новохопёронь буе]] -  ({{lang-ru|Новохопёрский район}})
+# [[Ольховаткань буе (Воронежень ёнкс)|Ольховаткань буе]] -  ({{lang-ru|Ольховатский район}})
+# [[Острогожскоень буе (Воронежень ёнкс)|Острогожскоень буе]] -  ({{lang-ru|Острогожский район}})
+# [[Павловскоень буе (Воронежень ёнкс)|Павловскоень буе]] -  ({{lang-ru|Павловский район}})
+# [[Панинонь буе(Воронежень ёнкс)|Панинонь буе]] -  ({{lang-ru|Панинский район}})
+# [[Петропавловкань буе (Воронежень ёнкс)|Петропавловкань буе]] -  ({{lang-ru|Петропавловский район}})
+# [[Поворинонь буе (Воронежень ёнкс)|Поворинонь буе]] -  ({{lang-ru|Поворинский район}})
+# [[Подгоренскоень буе (Воронежень ёнкс)|Подгоренскоень буе]] -  ({{lang-ru|Подгоренский район}})
+# [[Рамонень буе(Воронежень ёнкс)|Рамонень буе]] -  ({{lang-ru|Рамонский район}})
+# [[Репьёвкань буе (Воронежень ёнкс)|Репьёвкань буе]] -  ({{lang-ru|Репьёвский район}})
+# [[Россошень буе (Воронежень ёнкс)|Россошень буе]] -  ({{lang-ru|Россошанский район}})
+# [[Семилуконь буе (Воронежень ёнкс)|Семилуконь буе]] -  ({{lang-ru|Семилукский район}})
+# [[Таловоень буе (Воронежень ёнкс)|Таловоень буе]] -  ({{lang-ru|Таловский район}})
+# [[Терновкань буе(Воронежень ёнкс)|Терновкань буе]] -  ({{lang-ru|Терновский район}})
+# [[Хохольскоень буе(Воронежень ёнкс)|Хохольскоень буе]] -  ({{lang-ru|Хохольский район}})
+# [[Эртилень буе(Воронежень ёнкс)|Эртилень буе]] -  ({{lang-ru|Эртильский район}})
 
 {{Куншкань федерациянь кужось}}
 <br clear="all">
