*Empty MediaWiki Message*

--- a/Верехавань_буе_(Воронежень_ёнкс).mw
+++ b/Верехавань_буе_(Воронежень_ёнкс).mw
@@ -42,4 +42,4 @@
  | Название параметра1            = [[ОКАТО]]
  | Параметр1                      = {{ОКАТО|20211000}}
 }}
-'''Верехавань буе''' ашти [[Воронежень ёнкс]]со.
+'''Верехавань буе''' ашти [[Воронежень ёнкс]]со. Прявтонь кункшка - [[Вере Хава (Воронежень ёнкс)|Вере Хава]] веле.
