--- a/Бутурлиновкань_(Воронежень_ёнкс).mw
+++ b/Бутурлиновкань_(Воронежень_ёнкс).mw
@@ -36,7 +36,7 @@
  | Почтовые индексы               = 
  | Интернет-домен                 = 
  | Код автомобильных номеров      = 36, 136
- | Сайт                           = 
+ | Сайт                           = http://www.butur-rn.ru
  | Категория в Commons            = 
  | Примечания                     = 
  | Название параметра1            = [[ОКАТО]]
