Афтарчы видёнь имхонды.

--- a/Куз.mw
+++ b/Куз.mw
@@ -33,7 +33,7 @@
 
 Кузонть чувтонть рунгось виде, покш, лиясто эрси [[пиче]]денть пек седе покш. Кузонть чувтозо [[ожо]]ла — [[ашо]], седе чевте, шождыне, малавгак аволь истямо [[ойпиче]]в ды аволь кеме, кода пиченть. Кузонть потмовидьмезе арась. Аволь пек нарде ды аволь пек кеме чинзэ кувалт кузось пичеденть дешёва. 
 
-Кузонь чувтось моли мода лангонь эрьва кодамо чапамо-путомо, венчень строямо тевс, сонзэ эйстэ теить боцька лазт. Морговтомо кузонть эйстэ, конань слоензэ аштить вейкетьстэ, пильсить пек питней лазт, конат молить седямо кедьёнксонь теемс. Пек ламо кузонь вирь моли [[конёв]]онь теемс.
+Кузонь чувтось моли мода лангонь эрьва кодамо чапамо-путомо, венчень строямо тевс, сонзэ эйстэ теить боцька лазт. Морговтомо кузонть эйстэ, конань слоензэ аштить вейкетьстэ, пильсить пек питней лазт, конат молить седямо кедьёнксонь теемс. Пек ламо кузонь вирь моли [[конёв]]онь теемс. Кольтомо эъзият бирэдэ кардомато.
 
 === Видэнзэ ===
 ''Куз'' буесь,  пурны весемикс 37 васеньцевикс биологиянь вид ды 4 гибридэнь <ref>[http://apps.kew.org/wcsp/qsearch.do?plantName=Picea&page=quickSearch  World Checklist of Selected Plant Families: Picea in Royal Botanic Gardens, Kew] {{ref-en}}</ref>:
