/* Воронежень ёнксонь буетне */

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -38,7 +38,7 @@ MSKS=0|
 # [[Веремамононь буе (Воронежень ёнкс)|Веремамононь буе]] -  ({{lang-ru|Верхнемамонский район}})
 # [[Верехавань буе (Воронежень ёнкс)|Верехавань буе]] -  ({{lang-ru|Верхнехавский район}})
 # [[Воробьёвкань буе (Воронежень ёнкс)|Воробьёвкань буе]] -  ({{lang-ru|Воробьёвский район}})
-# [[Грибановкань буе (Воронежень ёнкс)|Грибановкань буе]] -  ({{lang-ru|Грибановский район}})
+# [[Грибановской буе (Воронежень ёнкс)|Грибановской буе]] -  ({{lang-ru|Грибановский район}})
 # [[Калачонь буе (Воронежень ёнкс)|Калачонь буе]] -  ({{lang-ru|Калачеевский район}})
 # [[Каменкань буе (Воронежень ёнкс)|Каменкань буе]] -  ({{lang-ru|Каменский район}})
 # [[Кантемировкань буе (Воронежень ёнкс)|Кантемировкань буе]] -  ({{lang-ru|Кантемировский район}})
