*Empty MediaWiki Message*

--- a/Алоош.mw
+++ b/Алоош.mw
@@ -4,10 +4,10 @@
 | Раськень коцт =Flag of Nizhny Novgorod.svg{{!}}border
 | Герб =Coat of Arms of Nizhniy Novgorod.svg
 | Мастор = [[Россия Мастор]]
-| Ошонть прявтозо = Сорокин Олег 
-| Ломанть = 1 250 615 (2010 ие)
+| Ошонть прявтозо = Карнилин Иван
+| Ломанть = 1 267 760 (2015 ие)
 | Васенцедэ ледстямонзо = 1221
-| Карта = 
+| Карта = Location Map of Nizhny Novgorod.svg
 |}}
 {{Лия смустьтне|Ало (смустьтне)}}
 '''А́лоош''' (лиякс '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
