Removing "Hotel_Uzbekistan,_Tashkent.jpg", it has been deleted from Commons by [[commons:User:Ymblanter|Ymblanter]] because: Per [[:c:Commons:Deletion requests/Files in category:Hotel Uzbekistan|]].

--- a/Ташкент_ош.mw
+++ b/Ташкент_ош.mw
@@ -3,7 +3,7 @@
  |статус                  = Ош
  |Эрзянь лем              = Ташкент ош
  |оригинальное название   = {{lang-uz|Toshkent, Тошкент}}
- |изображение             = Hotel Uzbekistan, Tashkent.jpg
+ |изображение             =
  |подчинение              = 
  |мастор                  = Узбекистан Мастор
  |герб                    = Tashkent_emblem.jpg
