--- a/Алоош.mw
+++ b/Алоош.mw
@@ -1,4 +1,4 @@
-{{Ош
+<!--{{Ош
 | Лем = Алоош
 | Васенце лем = Нижний Новгород
 | Раськень коцт =Flag of Nizhny Novgorod.svg{{!}}border
@@ -9,12 +9,76 @@
 | Васенцедэ ледстямонзо = 1221
 | Карта = Location Map of Nizhny Novgorod.svg
 |}}
+-->
+{{ЭТ
+ |статус                  = Ош
+ |Эрзянь лем              = Алоош
+ |оригинальное название   = {{lang-ru|Нижний Новгород}}
+ |изображение             = 
+ |подчинение              = 
+ |мастор                  = Россия Мастор
+ |герб                    = Coat of Arms of Nizhniy Novgorod.svg
+ |коцт                    = Flag of Nizhny Novgorod.svg{{!}}border
+ |описание герба          = 
+ |описание флага          = 
+ |ширина герба            = 
+ |ширина флага            = 
+  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
+  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
+  |CoordAddon             = 
+  |CoordScale             = 
+ |размер карты страны     = 
+ |размер карты региона    = 
+ |размер карты района     = 
+ |вид региона             = Ёнкс
+ |регион                  = Алоошонь
+ |регион в таблице        = Алоошонь ёнкс{{!}}Алоошонь
+ |вид района              = 
+ |район                   = 
+ |район в таблице         = 
+ |вид общины              = 
+ |община                  = 
+ |община в таблице        = 
+ |внутреннее деление      = 
+ |вид главы               = Ошонь прявт
+ |глава                   = 
+ |дата основания          = 
+ |первое упоминание       = 
+ |прежние имена           = 
+ |статус с                = 
+ |покшолмазо              = 
+ |вид высоты              = 
+ |высота центра НП        = 
+ |климат                  = 
+ |официальный язык        = 
+  |эрицятне               = 1 267 760
+  |год переписи           = 2015
+  |плотность              = 
+  |агломерация            = 
+  |национальный состав    = 
+  |конфессиональный состав= 
+  |этнохороним            = 
+ |часовой пояс            = +3
+ |DST                     = 
+ |телефонный код          = 
+ |почтовый индекс         = 
+ |почтовые индексы        = 
+ |автомобильный код       = 
+ |вид идентификатора      = 
+ |цифровой идентификатор  = 
+ |категория в Commons     = Nizhny Novgorod
+ |сайт                    = 
+ |язык сайта               = 
+ |язык сайта 2             = 
+ |add1n                    = 
+ |add1                     = 
+}}
 {{Лия смустьтне|Ало (смустьтне)}}
 '''А́лоош''' (лиякс '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
 
 Ошонть таркасо икеле аштесь покш эрзянь ош — Обран ошось.
-Кезэринь шказо: Эрзянь Обран ошось ульнесь Равонь-Окань юткосне, вере пандо прясо, косо нев Ало ошонь кремлясь. А Окань томбале, эрькесть ало ёнксо Олодимир-Суздальскоинь рузтнэ тейзть эйсест од ошне ды лемдизь Од Ало ошокс(Нижний Новгород). Ташто Обран ошость каршо, конась се шкава ульнесь паро вере таркасне чувтонь пирень куншкасо. Рузтнэ теизь Ало ошость, икелев ванозь, - бути седе вадрясто турьмекс эрзятнень марто. Колияк чумом а кенери, кода мерьсынь валтнэнь - седе тов, Обран ошость пултызь. Мееле, те ошонь юртозне кевень кремлясть путызь.   
-{{commonscat|Nizhny Novgorod}}
+Кезэринь шказо: Эрзянь Обран ошось ульнесь Равонь-Окань юткосне, вере пандо прясо, косо нев Ало ошонь кремлясь. А Окань томбале, эрькесть ало ёнксо Олодимир-Суздальскоинь рузтнэ тейзть эйсест од ошне ды лемдизь Од Ало ошокс (Нижний Новгород). Ташто Обран ошость каршо, конась се шкава ульнесь паро вере таркасне чувтонь пирень куншкасо. Рузтнэ теизь Ало ошость, икелев ванозь, - бути седе вадрясто турьмекс эрзятнень марто. Колияк чумом а кенери, кода мерьсынь валтнэнь - седе тов, Обран ошость пултызь. Мееле, те ошонь юртозне кевень кремлясть путызь.   
+
 
 {{stub}}
 
