*Empty MediaWiki Message*

--- a/Алоош.mw
+++ b/Алоош.mw
@@ -14,18 +14,18 @@
  |статус                  = Ош
  |Эрзянь лем              = Алоош
  |оригинальное название   = {{lang-ru|Нижний Новгород}}
- |изображение             = 
+ |изображение             = Collage-of-Nizhny-Novgorod-(2014).png
  |подчинение              = 
- |мастор                  = Россия Мастор
+ |мастор                  = Россия
  |герб                    = Coat of Arms of Nizhniy Novgorod.svg
  |коцт                    = Flag of Nizhny Novgorod.svg{{!}}border
  |описание герба          = 
  |описание флага          = 
  |ширина герба            = 
  |ширина флага            = 
-  |lat_dir = |lat_deg = |lat_min = |lat_sec = 
-  |lon_dir = |lon_deg = |lon_min = |lon_sec = 
-  |CoordAddon             = 
+  |lat_dir = |lat_deg = 56|lat_min = 18|lat_sec = 40.32
+  |lon_dir = |lon_deg = 43|lon_min = 55|lon_sec = 50.88
+  |CoordAddon             = type:city(1278300)_region:RU
   |CoordScale             = 
  |размер карты страны     = 
  |размер карты региона    = 
@@ -41,14 +41,14 @@
  |община в таблице        = 
  |внутреннее деление      = 
  |вид главы               = Ошонь прявт
- |глава                   = 
- |дата основания          = 
+ |глава                   = Карнилин Иван
+ |дата основания          = 1221 ие
  |первое упоминание       = 
  |прежние имена           = 
  |статус с                = 
- |покшолмазо              = 
+ |покшолмазо              = 410,68<ref name=Rosreestr>[http://www.to52.rosreestr.ru/upload/to52/files/18_07%20Доклад%20о%20состоянии%20%202010.zip Федеральная служба государственной регистрации, кадастра и картографии. Доклад О состоянии и использовании земель Нижегородской области в 2010 году]. Приложение 10. стр. 136</ref><ref name=GKS_2011>[http://www.gks.ru/scripts/db_inet2/passport/table.aspx?opt=22701000200620072008200920102011 БД ПМО Нижегородской области. Город Нижний Новгород]</ref> — 466,5<ref name=Adm>[http://www.admgor.nnov.ru/zastroyka/genplan/zapiska_genplan.doc Генеральный план города Нижнего Новгорода. Пояснительная записка] стр. 4</ref>
  |вид высоты              = 
- |высота центра НП        = 
+ |высота центра НП        = 200
  |климат                  = 
  |официальный язык        = 
   |эрицятне               = 1 267 760
@@ -62,16 +62,16 @@
  |DST                     = 
  |телефонный код          = 
  |почтовый индекс         = 
- |почтовые индексы        = 
+ |почтовые индексы        = 603000-603999
  |автомобильный код       = 
  |вид идентификатора      = 
  |цифровой идентификатор  = 
  |категория в Commons     = Nizhny Novgorod
- |сайт                    = 
- |язык сайта               = 
- |язык сайта 2             = 
- |add1n                    = 
- |add1                     = 
+ |сайт                    = http://нижнийновгород.рф/
+ |язык сайта               = ru
+ |язык сайта 2             = en
+ |add1n                    = Казнеть
+ |add1                     = {{Ленинэнь орден|тип=ош}}
 }}
 {{Лия смустьтне|Ало (смустьтне)}}
 '''А́лоош''' (лиякс '''Нижней Новгород''', {{lang-ru|Нижний Новгород}}) — те Россия Масторонть ошось, [[Алоошонь ёнкс|Алоошонь ёнксонть]] прявтошось.
