*Empty MediaWiki Message*

--- a/Воронеж_ош.mw
+++ b/Воронеж_ош.mw
@@ -4,7 +4,7 @@
  |оригинальное название   = Воронеж
  |изображение             = Главное здание управления ЮВЖД.jpg
  |подчинение              = 
- |мастор                  = Россия Мастор
+ |мастор                  = Россия
  |герб                    = Coat of arms of Voronezh.png
  |коцт                    = Flag of Voronezh.png
  |описание герба          = 
