--- a/Каменкань_буе_(Воронежень_ёнкс).mw
+++ b/Каменкань_буе_(Воронежень_ёнкс).mw
@@ -43,3 +43,4 @@
  | Параметр1                      = {{ОКАТО|20217000}}
 }}
 '''Каменкань буе''' ({{lang-ru|Каменский район}}) ашти [[Воронежень ёнкс]]со. Прявтонь кункшка - [[Каменка (Воронежень ёнкс)|Каменка]].
+{{stub}}
