/* Воронежень ёнксонь буетне */ Новохопёрской ош

--- a/Воронежень_ёнкс.mw
+++ b/Воронежень_ёнкс.mw
@@ -46,7 +46,7 @@ MSKS=0|
 # [[Лискинь буе (Воронежень ёнкс)|Лискинь буе]] -  ({{lang-ru|Лискинский район}})
 # [[Нижнедевицкоень буе (Воронежень ёнкс)|Нижнедевицкоень буе]] -  ({{lang-ru|Нижнедевицкий район}})
 # [[Одусманонь буе (Воронежень ёнкс)|Одусманонь буе]] -  ({{lang-ru|Новоусманский район}})
-# [[Новохопёронь буе (Воронежень ёнкс)|Новохопёронь буе]] -  ({{lang-ru|Новохопёрский район}})
+# [[Новохопёрскоень буе (Воронежень ёнкс)|Новохопёрскоень буе]] -  ({{lang-ru|Новохопёрский район}})
 # [[Ольховаткань буе (Воронежень ёнкс)|Ольховаткань буе]] -  ({{lang-ru|Ольховатский район}})
 # [[Острогожскоень буе (Воронежень ёнкс)|Острогожскоень буе]] -  ({{lang-ru|Острогожский район}})
 # [[Павловскоень буе (Воронежень ёнкс)|Павловскоень буе]] -  ({{lang-ru|Павловский район}})
